# TAC

backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 16eb67551ddf_create_activities_table.py  33e11f2adced_create_activities_table.py  364fdb7c3b11_create_users_table.py  5359a0572460_create_activities.py  592e63f758a4_create_activities_table.py  681bc59354f5_create_users_table.py  6a0bb69c01d7_create_activities.py  764983cb17cd_create_activities.py  a103f4f91bde_add_user_id_to_activities.py  af0ebd43d726_create_activities.py  f033472b2ed2_create_activities_table.py
backend/src/: main.py  schemas.py
backend/src/api/: activities.py  auth.py
backend/src/core/: config.py
backend/src/models/: activity.py  database.py  user.py
backend/src/services/: auth.py  email.py  google_auth.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: Login.jsx  Register.jsx  Tree.jsx  Verify.jsx
